@@ -1,3 +1,12 @@
+Changes from version 1.3.8 to 1.4.1:
+  * S-number criterion is now more robust by explicitly checking the
+	  signs of minima and maxima. This partially undoes the changes done
+	  for version 1.3 of libeemd.
+	* Bivariate EMD is now supported, see function bemd.
+  * Fixed OpenMP compliler portability issues.
+  * Functions fail properly in case sifting doesn't seem to converge.
+  
+
 Changes from version 1.3.7 to 1.3.8:
   * Updated to libeemd 1.4, see libeemd's changelog: https://bitbucket.org/luukko/libeemd
 Changes from version 1.3.6 to 1.3.7:
